@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <!--<TargetFrameworks>net462;netcoreapp3.0;net5.0</TargetFrameworks>-->
-    <TargetFrameworks>net9.0</TargetFrameworks>
+    <TargetFrameworks>net462;netcoreapp3.0;net5.0</TargetFrameworks>
+    <!--<TargetFrameworks>net9.0</TargetFrameworks>-->
 
     <!--For UnitTesting the .NET Standard 2.0 version-->
     <!--<TargetFrameworks>netcoreapp2.0</TargetFrameworks>-->
