@@ -33,8 +33,8 @@ namespace KGySoft.Drawing.SkiaSharp.UnitTests
     {
         #region Properties
 
-        protected static bool SaveToFile => true;
-        private static bool AddTimestamp => false;
+        protected static bool SaveToFile => false;
+        private static bool AddTimestamp => true;
 
         #endregion
 
