@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>KGySoft.Drawing.SkiaSharp</id>
-    <version>9.0.0-rc.1</version>
+    <version>9.0.0</version>
     <title>KGy SOFT Drawing Libraries for SkiaSharp</title>
     <authors>György Kőszeg</authors>
     <owners>György Kőszeg</owners>
@@ -11,11 +11,12 @@
     <!--<iconUrl>https://kgysoft.net/images/Icon64.png</iconUrl>-->
     <icon>Icon64.png</icon>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <summary>Provides KGySoft.Drawing.Core features for SkiaSharp.SKBitmap/SKPixmap/SKImage/SKSurface such as fast and direct bitmap manipulation, quantizing and dithering for any pixel format.</summary>
-    <description xml:space="preserve">KGy SOFT Drawing Libraries for SkiaSkarp offer KGySoft.Drawing.Core features for SkiaSharp types.
+    <summary>Provides KGySoft.Drawing.Core features for SkiaSharp.SKBitmap/SKPixmap/SKImage/SKSurface such as fast and direct bitmap manipulation, shape drawing, quantizing and dithering for any pixel format.</summary>
+    <description xml:space="preserve">The KGy SOFT Drawing Libraries for SkiaSharp package offers KGySoft.Drawing.Core features for SkiaSharp types.
 
 Among others:
 - Fast direct native SKBitmap and SKPixmap data access of any pixel format. This provides a working GetPixel/SetPixel even when SKBitmap.GetPixel fails to get the correct color.
+- High performance shape drawing into SKBitmap and SKPixmap instances of any pixel format with optional quantizing and dithering.
 - Read-only access to SKImage instances
 - Read-write access to SKSurface instances
 - Supporting every SKColorType and SKAlphaType
@@ -33,25 +34,25 @@ UWP specific libraries: https://www.nuget.org/packages/KGySoft.Drawing.Uwp/
 WinUI specific libraries: https://www.nuget.org/packages/KGySoft.Drawing.WinUI/</description>
     <releaseNotes>See the detailed release notes here: https://github.com/koszeggy/KGySoft.Drawing/blob/master/Specific/SkiaSharp/KGySoft.Drawing.SkiaSharp/changelog.txt</releaseNotes>
     <copyright>Copyright © KGy SOFT</copyright>
-    <tags>KGySoft Drawing skia skiasharp extension skbitmap skpixmap sksurface skimage pixelformat</tags>
+    <tags>KGySoft Drawing skia skiasharp extension skbitmap skpixmap sksurface skimage pixelformat shape shapes</tags>
     <language>en-US</language>
     <repository type="git" url="https://github.com/koszeggy/KGySoft.Drawing" />
     <dependencies>
       <group targetFramework="net462">
-        <dependency id="KGySoft.Drawing.Core" version="9.0.0-rc.1" />
-        <dependency id="SkiaSharp" version="2.88.7" />
+        <dependency id="KGySoft.Drawing.Core" version="9.0.0" />
+        <dependency id="SkiaSharp" version="3.116.1" />
       </group>
       <group targetFramework="netstandard2.0">
-        <dependency id="KGySoft.Drawing.Core" version="9.0.0-rc.1" />
-        <dependency id="SkiaSharp" version="2.88.7" />
+        <dependency id="KGySoft.Drawing.Core" version="9.0.0" />
+        <dependency id="SkiaSharp" version="3.116.1" />
       </group>
       <group targetFramework="netcoreapp3.0" >
-        <dependency id="KGySoft.Drawing.Core" version="9.0.0-rc.1" />
-        <dependency id="SkiaSharp" version="2.88.7" />
+        <dependency id="KGySoft.Drawing.Core" version="9.0.0" />
+        <dependency id="SkiaSharp" version="3.116.1" />
       </group>
       <group targetFramework="net5.0" >
-        <dependency id="KGySoft.Drawing.Core" version="9.0.0-rc.1" />
-        <dependency id="SkiaSharp" version="2.88.7" />
+        <dependency id="KGySoft.Drawing.Core" version="9.0.0" />
+        <dependency id="SkiaSharp" version="3.116.1" />
       </group>
     </dependencies>
   </metadata>
